Changed settle button to a link, moved scripts to be included at the bottom, and fixed layout issues with the transaction and settle sections

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -169,20 +169,20 @@ h2{
   padding:24px 12px 48px;
   min-width:600px
 }
+#foot{
+  border-top:1px solid #000;
+  height:24px;
+}
 .blocks_row{
   white-space:nowrap;
 }
 .blocks_row > div{
   display:inline-block;
   white-space:normal;
-}
-#foot{
-  border-top:1px solid #000;
-  height:24px;
+  vertical-align:top;
 }
 #trans,#settle{
   position:relative;
-  float:left;
   background:#E6E8E0;
   border-radius: 4px;
   padding:24px;
